# NotificationService

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
keycloak/: realm.json
notification_service/: manage.py
notification_service/notification_service/adapters/: dependencies.py
notification_service/notification_service/adapters/api/: apps.py  auth.py  serializers.py  urls.py  views.py
notification_service/notification_service/adapters/db/: apps.py  models.py  repositories.py  unit_of_work.py
notification_service/notification_service/adapters/user_provider/: api.py  keycloak.py  local.py
notification_service/notification_service/adapters/workers/: celery.py  notification_channels.py
notification_service/notification_service/application/: dtos.py
notification_service/notification_service/config/: __init__.py  asgi.py  celery.py  keycloak.py  urls.py  wsgi.py
notification_service/notification_service/config/settings/: _base.py  (+4 more)
notification_service/notification_service/domain/: entities.py  enums.py
tests/: test_adapters_api_auth.py  test_adapters_api_auth_additional.py  test_adapters_api_serializers.py  test_adapters_api_views.py  test_adapters_api_views_additional.py  test_adapters_celery.py  test_adapters_dependencies.py  test_adapters_repositories.py  test_adapters_unit_of_work.py  test_adapters_user_provider.py  test_adapters_workers.py  test_application_dtos.py  test_application_exceptions.py  test_application_use_cases.py  test_domain_entities.py  test_domain_enums.py
(+14 files in other folders)
