[project]
name = "notificationservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "cryptography>=46.0.3",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.2",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-keycloak>=5.12.0",
    "requests>=2.32.5",
]
